H3CIPMSJAVA-20180830/src/objects/CtiServer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Alternate_Server_Address__c</fullName>
        <label>Alternate Server Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Server_port__c</fullName>
        <label>Alternate Server port</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Voice_Recording_Address__c</fullName>
        <label>Voice Recording Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Voice_Recording_Port__c</fullName>
        <label>Voice Recording Port</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Address__c</fullName>
        <label>Server Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_port__c</fullName>
        <label>Server port</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Cti Server</label>
</CustomObject>